feat: Add orange theme options to theme selector
- Added 'Orange Light' and 'Orange Dark' options to theme dropdown
- Implemented complete orange theme configurations with:
  - Light variant: Warm orange sidebar (#9a3412), light backgrounds
  - Dark variant: Lighter orange accents for dark mode
  - Proper contrast and accessibility colors
  - Matching script backgrounds and quote colors

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
                             <option value="sage-dark">🌿 Sage Dark</option>
                             <option value="sky-light">☁️ Sky Light</option>
                             <option value="sky-dark">☁️ Sky Dark</option>
+                            <option value="orange-light">🧡 Orange Light</option>
+                            <option value="orange-dark">🧡 Orange Dark</option>
                             <option value="presentation-light">💼 Presentation Light</option>
                             <option value="presentation-dark">💼 Presentation Dark</option>
                         </select>
@@ -4066,6 +4068,50 @@
                 'script-font-family': '"Merriweather", serif',
                 'script-font-size': '18px'
             },
+            'orange-light': {
+                'ui-theme': 'orange',
+                'layout-mode': 'executive-presentation',
+                'primary-color': '#f97316',
+                'primary-dark': '#ea580c',
+                'bg-main': '#ffffff',
+                'bg-secondary': '#fff7ed',
+                'bg-sidebar': '#9a3412',
+                'text-primary': '#0f172a',
+                'text-secondary': '#1e293b',
+                'text-light': '#fed7aa',
+                'border-color': '#fed7aa',
+                'accent-green': '#059669',
+                'accent-yellow': '#d97706',
+                'accent-red': '#b91c1c',
+                'script-bg': '#fef3c7',
+                'script-text': '#0f172a',
+                'quote-color': '#f97316',
+                'script-font-family': '"Merriweather", serif',
+                'script-font-size': '18px'
+            },
+
+            'orange-dark': {
+                'ui-theme': 'orange',
+                'layout-mode': 'executive-presentation',
+                'primary-color': '#fb923c',
+                'primary-dark': '#f97316',
+                'bg-main': '#0f172a',
+                'bg-secondary': '#1e293b',
+                'bg-sidebar': '#0f172a',
+                'text-primary': '#f1f5f9',
+                'text-secondary': '#cbd5e1',
+                'text-light': '#64748b',
+                'border-color': '#334155',
+                'accent-green': '#10b981',
+                'accent-yellow': '#f59e0b',
+                'accent-red': '#ef4444',
+                'script-bg': '#1e293b',
+                'script-text': '#f1f5f9',
+                'quote-color': '#fb923c',
+                'script-font-family': '"Merriweather", serif',
+                'script-font-size': '18px'
+            },
+
             'presentation-dark': {
                 'ui-theme': 'presentation',
                 'layout-mode': 'executive-presentation',
