--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
     <script type="module" src="/src/utils/questionState.js"></script>
     <script type="module" src="/src/utils/uiHelpers.js"></script>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
 </body>
 </html>
